--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -15,10 +15,10 @@
       <tr>
         <td><%= link_to topic.title, topic %></td>
         <td><%= pluralize(topic.votes.count, "vote") %></td>
-        <td><%= button_to '+1', upvote_topic_path(topic), method: :post %>
+        <td><%= button_to '+1', upvote_topic_path(topic), method: :post, class: 'btn btn-success' %>
         </td>
-        <td><%= button_to '-1', downvote_topic_path(topic), method: :post %></td>
-        <td><%= link_to 'Delete', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= button_to '-1', downvote_topic_path(topic), method: :post, class: 'btn btn-danger' %></td>
+        <td><%= link_to 'Delete', topic, method: :delete, data: { confirm: 'Are you sure?'} %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,7 +26,7 @@
 
 <br>
 
-<%= link_to 'New Topic', new_topic_path %>
+<%= link_to 'Alphabetical Sort', topics_path %>
 <!--direction: is my variable, it can be used in the controller as params[:direction] -->
-<%= link_to '&darr; Sort'.html_safe, sorted_topics_path(direction: 'desc') %> 
-<%= link_to '&uarr; Sort'.html_safe, sorted_topics_path(direction: 'asc') %>
+<%= link_to '&darr; Sort by votes'.html_safe, topics_path(direction: 'desc') %> 
+<%= link_to '&uarr; Sort by votes'.html_safe, topics_path(direction: 'asc') %>
