--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -6,7 +6,9 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th colspan="3"></th>
+      <th>Votes</th>
+      <th>Upvote</th>
+      <th>Downvote</th>
     </tr>
   </thead>
 
@@ -18,7 +20,6 @@
         <td><%= button_to '+1', upvote_topic_path(topic), method: :post, class: 'btn btn-success' %>
         </td>
         <td><%= button_to '-1', downvote_topic_path(topic), method: :post, class: 'btn btn-danger' %></td>
-        <td><%= link_to 'Delete', topic, method: :delete, data: { confirm: 'Are you sure?'} %></td>
       </tr>
     <% end %>
   </tbody>
