--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,6 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
-
 <body>
  <header>
   <nav role="navigation" class="navbar navbar-default">
@@ -24,12 +23,15 @@
             <li><%= link_to "New Topic", new_topic_path %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Login</a></li>
+            <li><%=link_to "Sign Up", new_user_registration_path %></li>
+            <li><%=link_to "Login", new_user_session_path %></li>
         </ul>
     </div>
 </nav>
  </header> 
   <div class='content'>
+     <p class="notice"><%= notice %></p>
+     <p class="alert"><%= alert %></p>
     <%= yield %>
   </div>
 </body>
