--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag :defaults %>
 </head>
 <body>
  <header>
@@ -19,12 +20,16 @@
     </div>
     <div id="navbarCollapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li> <%= link_to "Home", topics_path %> </li>
+            <li><%= link_to "Home", topics_path %> </li>
             <li><%= link_to "New Topic", new_topic_path %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><%=link_to "Sign Up", new_user_registration_path %></li>
-            <li><%=link_to "Login", new_user_session_path %></li>
+            <% if user_signed_in? %>          
+                <li><%=link_to "Log out", destroy_user_session_path, :method => :delete %></li>
+            <% else %>
+                 <li><%=link_to "Sign Up", new_user_registration_path %></li>
+                 <li><%=link_to "Login", new_user_session_path %></li>
+                 <% end %>
         </ul>
     </div>
 </nav>
