--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,12 @@
 </nav>
  </header> 
   <div class='content'>
-     <p class="notice"><%= notice %></p>
-     <p class="alert"><%= alert %></p>
+     <% if notice %>
+       <p class="alert alert-success"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+        <p class="alert alert-danger"><%= alert %></p>
+      <% end %>
     <%= yield %>
   </div>
 </body>
